--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="swiper-slide semi-dark-layer">
             <img src="images/summer.jpg" />
             <div class="text-content">
-              <h2 class="title">Summer <span>Season</span></h2>
+              <h2 class="title">Summer</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt quibusdam eius consequuntur repellat at repudiandae nisi quisquam recusandae numquam excepturi delectus natus cum odio, id sequi, vel quas debitis?</p>
               <button class="read-btn">Read More <i class="uil uil-arrow-right"></i></button>
             </div>
@@ -46,7 +46,7 @@
           <div class="swiper-slide dark-layer">
             <img src="images/autumn.jpg" />
             <div class="text-content">
-              <h2 class="title">Fall <span>Season</span></h2>
+              <h2 class="title">Fall</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt quibusdam eius consequuntur repellat at repudiandae nisi quisquam recusandae numquam excepturi delectus natus cum odio, id sequi, vel quas debitis?</p>
               <button class="read-btn">Read More <i class="uil uil-arrow-right"></i></button>
             </div>
@@ -54,7 +54,7 @@
           <div class="swiper-slide dark-layer">
             <img src="images/winter.jpg" />
             <div class="text-content">
-              <h2 class="title">Winter <span>Season</span></h2>
+              <h2 class="title">Winter</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt quibusdam eius consequuntur repellat at repudiandae nisi quisquam recusandae numquam excepturi delectus natus cum odio, id sequi, vel quas debitis?</p>
               <button class="read-btn">Read More <i class="uil uil-arrow-right"></i></button>
             </div>
@@ -62,7 +62,7 @@
           <div class="swiper-slide semi-dark-layer">
             <img src="images/spring.jpg" />
             <div class="text-content">
-              <h2 class="title">Spring <span>Season</span></h2>
+              <h2 class="title">Spring</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt quibusdam eius consequuntur repellat at repudiandae nisi quisquam recusandae numquam excepturi delectus natus cum odio, id sequi, vel quas debitis?</p>
               <button class="read-btn">Read More <i class="uil uil-arrow-right"></i></button>
             </div>
