--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="home">
       <div class="media-icons">
         <a href="#"><i class="uil uil-facebook-f"></i></a>
-        <a href="#"><i class="uil uil-instagram"></i></a>
+        <a href="https://www.instagram.com/yudhistira.apn/"><i class="uil uil-instagram"></i></a>
         <a href="#"><i class="uil uil-twitter"></i></a>
       </div>
       <div class="swiper bg-slider">
